--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Happy Birthday!!! :)</title>
+
+  <!-- Bosstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" />
+  <!-- End Bosstrap Icons -->
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet" />
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -36,8 +40,10 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
-        </p>
+          Happy birthday to youu!! Selamat bertambah umur cukup umur ajaa yang bertambah jangan pikiran teruss yang nambah overthiking tiap malem HAHAHAHAHA.. semoga apa yang kamu semogakan tetap tersemogakan, makin cantikk makin stabil makin baikk murah senyumm gajutek lagii makin banyak temennya dikelass terutama siiii etaa KWKWKWKWK dan jangan benci lagi sama ulang tahun mu yaaa.
+        </p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-balloon-heart-fill" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M8.49 10.92C19.412 3.382 11.28-2.387 8 .986 4.719-2.387-3.413 3.382 7.51 10.92l-.234.468a.25.25 0 1 0 .448.224l.04-.08c.009.17.024.315.051.45.068.344.208.622.448 1.102l.013.028c.212.422.182.85.05 1.246-.135.402-.366.751-.534 1.003a.25.25 0 0 0 .416.278l.004-.007c.166-.248.431-.646.588-1.115.16-.479.212-1.051-.076-1.629-.258-.515-.365-.732-.419-1.004a2.376 2.376 0 0 1-.037-.289l.008.017a.25.25 0 1 0 .448-.224l-.235-.468ZM6.726 1.269c-1.167-.61-2.8-.142-3.454 1.135-.237.463-.36 1.08-.202 1.85.055.27.467.197.527-.071.285-1.256 1.177-2.462 2.989-2.528.234-.008.348-.278.14-.386Z"/>
+        </svg>
         <p class="fake-btn">Send</p>
       </div>
     </div>
@@ -66,7 +72,7 @@
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 id="wishText">Perempuan paling cantik walaupun kamu gapernah percaya :)</h5>
       </div>
     </div>
 
@@ -139,8 +145,8 @@
     </div>
 
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p>Okay, it's last pages.</p>
+      <p id="replay">Silahkan kamu menghilang selama apa yang kamu butuhin ketika itu datang nanti, tidak perlu risau cemas akan hal yg akan terjadi. nanti ketika kamu sudah ingin muncul kembali tenang aja kamu cukup nengok kebelekang saja aku selalu disitu jika kamu butuh aku suatu saat nanti aku ada disana. Satu yang paling penting jangan merasa kesepian selama kamu masih temenan sama aku marii kita jelajahi bandung, tidak hanya bandung.. Mari jelajahi semuanyaa</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
